--- a/decide/visualizer/templates/visualizer/visualizer.html
+++ b/decide/visualizer/templates/visualizer/visualizer.html
@@ -15,7 +15,7 @@
         <b-navbar type="dark" variant="secondary">
             <b-navbar-brand tag="h1">Decide</b-navbar-brand>
         </b-navbar>
-
+        <h1>Que pena</h1> 
         <div class="voting container">
             <h1>[[ voting.id ]] - [[ voting.name ]]</h1>
 
